--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
  <head></head>
  <body id="id02">
   <div id="iwgs">
-   <div id="isck">
-   </div>
    <div id="ixdee">
    </div>
    <div id="ixpob">
@@ -1597,6 +1595,52 @@
     </footer>
    </div>
   </div>
+  <script>var items = document.querySelectorAll('#ijmd0c');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+var items = document.querySelectorAll('#isck');
+for (var i = 0, len = items.length; i < len; i++) {
+  (function(){
+    const t=this.querySelectorAll(".hamburger3"),e=this.querySelectorAll(".navbar-collapse");
+    for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){
+      t[n].classList.toggle("active"),e[n].classList.toggle("show")}
+                                                    )
+  }
+   .bind(items[i]))();
+}
+var items = document.querySelectorAll('#ixdee');
+for (var i = 0, len = items.length; i < len; i++) {
+  (function(){
+    const t=this.querySelectorAll(".hamburger1"),e=this.querySelectorAll(".navbar-collapse");
+    for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){
+      t[n].classList.toggle("active"),e[n].classList.toggle("show")}
+                                                    )
+  }
+   .bind(items[i]))();
+}
+var items = document.querySelectorAll('#ixpob');
+for (var i = 0, len = items.length; i < len; i++) {
+  (function(){
+    const t=this.querySelectorAll(".hamburger2"),e=this.querySelectorAll(".navbar-collapse");
+    for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){
+      t[n].classList.toggle("active"),e[n].classList.toggle("show")}
+                                                    )
+  }
+   .bind(items[i]))();
+}
+var items = document.querySelectorAll('#ijmd0c');
+for (var i = 0, len = items.length; i < len; i++) {
+  (function(){
+    const t=this.querySelectorAll(".hamburger4"),e=this.querySelectorAll(".nav-menu");
+    for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){
+      t[n].classList.toggle("active"),e[n].classList.toggle("active")}
+                                                    )
+  }
+   .bind(items[i]))();
+}
+
+}.bind(items[i]))();
+          }</script>
  </body>
 </html>
 </html>
